fix height issue on mobile

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -7,11 +7,14 @@
     gap: var(--gap);
     padding: 1px;
     width: 100vw;
-    height: calc(100vh - 4rem);
+    margin-top: 4rem;
+    /* height: calc(100vh - 4rem); */
     background-color: var(--bg-100);
 }
 
 #header {
+    position: absolute;
+    top: 0;
     height: 4rem;
     width: 100%;
     box-shadow: 0 -1px 0 #30363C inset;
